apply plugin: 'java'

sourceCompatibility = 1.8
targetCompatibility = 1.8

version = 1.0

repositories {
    
    maven { url "http://download.osgeo.org/webdav/geotools/" }
    maven { url "https://packages.atlassian.com/maven-3rdparty/"}
    mavenCentral()

}


dependencies {
    compile project(':OmirlBusinessData')
    compile project(':Omirl')
    compile project(':OmirlDaemon')
}

jar {
    zip64 true

    baseName = 'OmirlDaemonCFMI'
    manifest {
        attributes \
            'Main-Class': 'it.fadeout.omirl.daemon.OmirlDaemon',
            'Built-Date': new Date(),
            'Implementation-Version': version,
            'Class-Path': '.'
    }

    from(configurations.compile.collect { it.isDirectory() ? it : zipTree(it) })
}
